# DocVerify

./: .env  .env.example  DocVerify-Technical-Reference.md  DocVerifyDashboard.jsx  Dockerfile  README.md  aegra.json  dashboard.html  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt  run_pipeline_original.py  setup.sh  test_aegra.py
agents/: answer_agent.py  claim_cache.py  claim_extractor_agent.py  correlation_agent.py  cost_tracker.py  cross_llm_checker.py  doc_editor_agent.py  edit_verifier.py  editor_agent.py  evaluator_agent.py  failure_ledger.py  gap_verifier_agent.py  ingestion_agent.py  knowledge_store.py  nli_verifier.py  question_worker.py  ragas_evaluator.py  research_agent.py  retriever_agent.py  router_agent.py  shared_context.py  verification_agent.py
config/: pipeline_config.yaml
docverify/: __init__.py  agent.py  graph.py  server.py
evaluation/: evaluation_spec.yaml
knowledge/: approved_edits.json  claim_cache.json  failure_ledger.json  full_extracted_text.md  knowledge_store.json  parsed_chunks.jsonl
knowledge/chroma_db/: chroma.sqlite3
knowledge/edited_markdown/: ADR_Authentication_and_Authorization_EDITED.md  DDC_Client_JS_SDK_Wiki_EDITED.md  DDC_Core_Wiki_EDITED.md  DDC_from_Sergey_Poluyan_EDITED.md  Data_Redundancy_Strategy_EDITED.md  Encrypted_Data_Access_and_Key_Delegation_EDITED.md  edit_review.html
knowledge/markdown_sources/: ADR_Authentication_and_Authorization.md  DDC_Client_JS_SDK_Wiki.md  DDC_Core_Wiki.md  DDC_from_Sergey_Poluyan.md  (+4 more)
reports/: latest_dashboard.json  latest_report.md  latest_scores.json
